Updated projects for version 2.3.9

--- a/Windows.Shell/Vanara.Windows.Shell.csproj
+++ b/Windows.Shell/Vanara.Windows.Shell.csproj
@@ -4,7 +4,7 @@
     <Description>Classes for Windows Shell items derived from the Vanara PInvoke libraries. Includes shell items, files, icons, links, and taskbar lists.</Description>
     <Copyright>Copyright © 2017-2019</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>2.3.8</VersionPrefix>
+    <VersionPrefix>2.3.9</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45</TargetFrameworks>
     <AssemblyName>Vanara.Windows.Shell</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -68,6 +68,7 @@ ChangeFilters, ExecutableType, FolderItemFilter, LibraryFolderFilter, LibraryVie
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Remove="ShellObjects\~ShellSearch.cs" />
     <Compile Remove="TaskBar\AssocUtil.cs" />
     <Compile Remove="TaskBar\ImageIndexer.cs" />
     <Compile Remove="TaskBar\JumpList.cs" />
@@ -86,8 +87,10 @@ ChangeFilters, ExecutableType, FolderItemFilter, LibraryFolderFilter, LibraryVie
     <Compile Remove="TaskBar\~ThumbnailToolbar.cs" />
     <Compile Remove="TaskBar\~ThumbnailToolbarButton.cs" />
     <Compile Remove="TaskBar\~ThumbnailToolbarButtonCollection.cs" />
+    <Compile Remove="~ShellSearchConditions.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ShellObjects\~ShellSearch.cs" />
     <None Include="TaskBar\~AssocUtil.cs" />
     <None Include="TaskBar\~ImageIndexer.cs" />
     <None Include="TaskBar\~JumpList.cs" />
@@ -97,6 +100,7 @@ ChangeFilters, ExecutableType, FolderItemFilter, LibraryFolderFilter, LibraryVie
     <None Include="TaskBar\~ThumbnailToolbar.cs" />
     <None Include="TaskBar\~ThumbnailToolbarButton.cs" />
     <None Include="TaskBar\~ThumbnailToolbarButtonCollection.cs" />
+    <None Include="~ShellSearchConditions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Vanara.Core.csproj" />
@@ -104,5 +108,10 @@ ChangeFilters, ExecutableType, FolderItemFilter, LibraryFolderFilter, LibraryVie
     <ProjectReference Include="..\PInvoke\Shared\Vanara.PInvoke.Shared.csproj" />
     <ProjectReference Include="..\PInvoke\Shell32\Vanara.PInvoke.Shell32.csproj" />
     <ProjectReference Include="..\PInvoke\User32.Gdi\Vanara.PInvoke.User32.Gdi.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Interop.SearchAPI">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Windows Kits\10\bin\10.0.17763.0\x64\interop.searchapi.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
