Added remainder of AdvApi32 Windows service management functions and provided .NET native security access functions and classes.

--- a/UnitTests/PInvoke/Security/Security.csproj
+++ b/UnitTests/PInvoke/Security/Security.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="AdvApi32\AdvApi32Tests.cs" />
     <Compile Include="AdvApi32\AuditTests.cs" />
+    <Compile Include="AdvApi32\ServiceTests.cs" />
     <Compile Include="AdvApi32\PSIDTests.cs" />
     <Compile Include="Authz\AuthzTests.cs" />
     <Compile Include="Secur32\SaslTests.cs" />
