--- a/UnitTests/PInvoke/Shell32/Shell32.csproj
+++ b/UnitTests/PInvoke/Shell32/Shell32.csproj
@@ -38,6 +38,7 @@
     <Compile Include="KnownFolderIdExtTests.cs" />
     <Compile Include="Methods.cs" />
     <Compile Include="ProgressDialogTests.cs" />
+    <Compile Include="BlitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Core\Vanara.Core.csproj">
@@ -52,6 +53,14 @@
       <Project>{3226020f-4c9d-41b3-ac8a-2bc9fd064cd8}</Project>
       <Name>Vanara.PInvoke.Shell32</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NUnit">
+      <Version>3.12.0</Version>
+    </PackageReference>
+    <PackageReference Include="NUnit3TestAdapter">
+      <Version>3.13.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
