Breaking fixes on heap functions. Added helper methods and prevented use of raw pointer for heap allocation to prevent memory leaks. Fixed bugs on function definitions.

--- a/UnitTests/PInvoke/Kernel32/Kernel32.csproj
+++ b/UnitTests/PInvoke/Kernel32/Kernel32.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HeapApiTests.cs" />
     <Compile Include="FileApiTests.cs" />
     <Compile Include="FibersApiTests.cs" />
     <Compile Include="ErrHandlingApiTests.cs" />
