--- a/UnitTests/PInvoke/Kernel32/Kernel32.csproj
+++ b/UnitTests/PInvoke/Kernel32/Kernel32.csproj
@@ -48,6 +48,8 @@
     <Compile Include="AppModelTests.cs" />
     <Compile Include="InterlockedApiTests.cs" />
     <Compile Include="InteropServices\SafeLocalHandleTests.cs" />
+    <Compile Include="ProcessSnapshotTests.cs" />
+    <Compile Include="ProcessThreadsTests.cs" />
     <Compile Include="PathCchTests.cs" />
     <Compile Include="ProcessEnvTests.cs" />
     <Compile Include="NameSpaceApiTests.cs" />
@@ -59,7 +61,7 @@
     <Compile Include="Kernel32Tests.cs" />
     <Compile Include="ConsoleTests.cs" />
     <Compile Include="DebugApiTests.cs" />
-    <Compile Include="SnapshotTests.cs" />
+    <Compile Include="TLHelp32Tests.cs" />
     <Compile Include="SysInfoTests.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -90,6 +92,9 @@
     </PackageReference>
     <PackageReference Include="NUnit3TestAdapter">
       <Version>3.13.0</Version>
+    </PackageReference>
+    <PackageReference Include="ObjectDumper">
+      <Version>1.0.0.12</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
