--- a/UnitTests/PInvoke/Kernel32/Kernel32.csproj
+++ b/UnitTests/PInvoke/Kernel32/Kernel32.csproj
@@ -48,6 +48,9 @@
     <Compile Include="AppModelTests.cs" />
     <Compile Include="InterlockedApiTests.cs" />
     <Compile Include="InteropServices\SafeLocalHandleTests.cs" />
+    <Compile Include="RealtimeApiSetTests.cs" />
+    <Compile Include="PsApiTests.cs" />
+    <Compile Include="ProfileApiTests.cs" />
     <Compile Include="ProcessSnapshotTests.cs" />
     <Compile Include="ProcessThreadsTests.cs" />
     <Compile Include="PathCchTests.cs" />
@@ -61,6 +64,7 @@
     <Compile Include="Kernel32Tests.cs" />
     <Compile Include="ConsoleTests.cs" />
     <Compile Include="DebugApiTests.cs" />
+    <Compile Include="SuccessfulConstraint.cs" />
     <Compile Include="TLHelp32Tests.cs" />
     <Compile Include="SysInfoTests.cs" />
   </ItemGroup>
