--- a/UnitTests/PInvoke/Kernel32/Kernel32.csproj
+++ b/UnitTests/PInvoke/Kernel32/Kernel32.csproj
@@ -65,7 +65,6 @@
     <Compile Include="Kernel32Tests.cs" />
     <Compile Include="ConsoleTests.cs" />
     <Compile Include="DebugApiTests.cs" />
-    <Compile Include="SuccessfulConstraint.cs" />
     <Compile Include="TLHelp32Tests.cs" />
     <Compile Include="SysInfoTests.cs" />
   </ItemGroup>
@@ -86,9 +85,9 @@
       <Project>{a5e519e9-feba-4fe3-93a5-b8269bef72f4}</Project>
       <Name>Vanara.PInvoke.Shared</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\CSharpRunner\CSharpRunner.csproj">
+    <ProjectReference Include="..\..\CSharpRunner\Shared.csproj">
       <Project>{a96cff10-0967-429a-8700-4a86c97c5603}</Project>
-      <Name>CSharpRunner</Name>
+      <Name>Shared</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -97,9 +96,6 @@
     </PackageReference>
     <PackageReference Include="NUnit3TestAdapter">
       <Version>3.13.0</Version>
-    </PackageReference>
-    <PackageReference Include="ObjectDumper">
-      <Version>1.0.0.12</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
