--- a/UnitTests/CSharpRunner/Shared.csproj
+++ b/UnitTests/CSharpRunner/Shared.csproj
@@ -56,14 +56,14 @@
     <PackageReference Include="Microsoft.CodeAnalysis">
       <Version>3.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.2</Version>
+    </PackageReference>
     <PackageReference Include="NUnit">
       <Version>3.12.0</Version>
     </PackageReference>
     <PackageReference Include="NUnit3TestAdapter">
       <Version>3.13.0</Version>
-    </PackageReference>
-    <PackageReference Include="ObjectDumper">
-      <Version>1.0.0.12</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
