Completed unit testing and fixes for UtilApiSet.h

--- a/UnitTests/PInvoke/Kernel32/Kernel32.csproj
+++ b/UnitTests/PInvoke/Kernel32/Kernel32.csproj
@@ -48,6 +48,7 @@
     <Compile Include="AppModelTests.cs" />
     <Compile Include="InterlockedApiTests.cs" />
     <Compile Include="InteropServices\SafeLocalHandleTests.cs" />
+    <Compile Include="UtilApiSetTests.cs" />
     <Compile Include="TimeZoneApiTests.cs" />
     <Compile Include="ThreadPoolLegacyApiSetTests.cs" />
     <Compile Include="ThreadPoolApiSetTests.cs" />
