--- a/UnitTests/PInvoke/Kernel32/Kernel32.csproj
+++ b/UnitTests/PInvoke/Kernel32/Kernel32.csproj
@@ -48,6 +48,7 @@
     <Compile Include="AppModelTests.cs" />
     <Compile Include="InterlockedApiTests.cs" />
     <Compile Include="InteropServices\SafeLocalHandleTests.cs" />
+    <Compile Include="WinBase.ProcessThreadTests.cs" />
     <Compile Include="WinBase.PowerTests.cs" />
     <Compile Include="WinBase.MemMgmtTests.cs" />
     <Compile Include="WinBase.MailslotTests.cs" />
