--- a/UnitTests/PInvoke/Kernel32/Kernel32.csproj
+++ b/UnitTests/PInvoke/Kernel32/Kernel32.csproj
@@ -48,6 +48,7 @@
     <Compile Include="AppModelTests.cs" />
     <Compile Include="InterlockedApiTests.cs" />
     <Compile Include="InteropServices\SafeLocalHandleTests.cs" />
+    <Compile Include="WinNTTests.cs" />
     <Compile Include="WinNlsTests.cs" />
     <Compile Include="WinBase.UmsTests.cs" />
     <Compile Include="WinBase.TxFTests.cs" />
