--- a/UnitTests/PInvoke/Security/Security.csproj
+++ b/UnitTests/PInvoke/Security/Security.csproj
@@ -49,6 +49,7 @@
     <Compile Include="AdvApi32\AuditTests.cs" />
     <Compile Include="AdvApi32\AppMgmtTests.cs" />
     <Compile Include="AdvApi32\ProviderInfo.cs" />
+    <Compile Include="AdvApi32\LsaTests.cs" />
     <Compile Include="AdvApi32\SecurityBaseApiTests.cs" />
     <Compile Include="AdvApi32\ServiceTests.cs" />
     <Compile Include="AdvApi32\PSIDTests.cs" />
