Completed unit tests for processthreadsapi.h in AdvApi32

--- a/UnitTests/PInvoke/Security/Security.csproj
+++ b/UnitTests/PInvoke/Security/Security.csproj
@@ -54,6 +54,7 @@
     <Compile Include="AdvApi32\ProviderInfo.cs" />
     <Compile Include="AdvApi32\LsaTests.cs" />
     <Compile Include="AdvApi32\PerfLibTests.cs" />
+    <Compile Include="AdvApi32\ProcessThreadsApiTests.cs" />
     <Compile Include="AdvApi32\SecurityBaseApiTests.cs" />
     <Compile Include="AdvApi32\ServiceTests.cs" />
     <Compile Include="AdvApi32\PSIDTests.cs" />
