--- a/UnitTests/PInvoke/Security/Security.csproj
+++ b/UnitTests/PInvoke/Security/Security.csproj
@@ -45,6 +45,7 @@
     <Compile Include="AdvApi32\EventRecordEventArgs.cs" />
     <Compile Include="AdvApi32\EventTraceController.cs" />
     <Compile Include="AdvApi32\EventTraceLogs.cs" />
+    <Compile Include="AdvApi32\wctTests.cs" />
     <Compile Include="AdvApi32\EvnTraceTests.cs" />
     <Compile Include="AdvApi32\EvntProvTests.cs" />
     <Compile Include="AdvApi32\AdvApi32Tests.cs" />
