Completed unit testing and fixes for all schannel.h, secur32.h and sspi.h functions

--- a/UnitTests/PInvoke/Security/Security.csproj
+++ b/UnitTests/PInvoke/Security/Security.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Secur32\SaslTests.cs" />
     <Compile Include="Secur32\SspiTests.cs" />
     <Compile Include="Secur32\Secur32Tests.cs" />
+    <Compile Include="Schannel\SchannelTests.cs" />
     <Compile Include="SecurityTests.cs" />
   </ItemGroup>
   <ItemGroup>
