--- a/Core/Vanara.Core.csproj
+++ b/Core/Vanara.Core.csproj
@@ -9,7 +9,7 @@
 * Memory stream based on marshaled memory</Description>
     <Copyright>Copyright © 2017-2019</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>2.3.11</VersionPrefix>
+    <VersionPrefix>3.0.0</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard2.0;netcoreapp2.0;netcoreapp2.1</TargetFrameworks>
     <AssemblyName>Vanara.Core</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -30,13 +30,13 @@
     <PackageReleaseNotes>Currently implements:
 
 Classes
-BitHelper, ByteSizeFormatter, ComConnectionPoint, ComReleaser&lt;T&gt;, ComReleaserFactory, ComStream, ComTypeExtensions, CorrespondingTypeAttribute, CoTaskMemoryMethods, EnumerableEqualityComparer&lt;T&gt;, EnumExtensions, EventedList&lt;T&gt;, FileTimeExtensions, Formatter, FormatterComposer, GenericSafeHandle, GenericVirtualReadOnlyDictionaryy&lt;T&gt;, HexDempHelpers, HGlobalMemoryMethods, InteropExtensions, IntPtrConverter, IOExtensions, ListChangedEventArgs&lt;T&gt;, MarshalingStream, NativeMemoryStream, PinnedObject, ReflectionExtensions, SafeAllocatedMemoryHandle, SafeByteArray, SafeCoTaskMemHandle, SafeCoTaskMemString, SafeHGlobalHandle, SafeMemoryHandle&lt;T&gt;, SafeMemoryHandleExt&lt;T&gt;, SparseArray&lt;T&gt;, StringHelper, TryGetValueDelegate, VirtualDictionary&lt;T&gt;, VirtualReadOnlyDictionary&lt;T&gt;
+AlignedMemory&lt;T&gt;, BitHelper, ByteSizeFormatter, ComConnectionPoint, ComReleaser&lt;T&gt;, ComReleaserFactory, ComStream, ComTypeExtensions, CorrespondingTypeAttribute, CoTaskMemoryMethods, EnumerableEqualityComparer&lt;T&gt;, EnumExtensions, EventedList&lt;T&gt;, FileTimeExtensions, Formatter, FormatterComposer, GenericSafeHandle, GenericVirtualReadOnlyDictionaryy&lt;T&gt;, HexDempHelpers, HGlobalMemoryMethods, InteropExtensions, IntPtrConverter, IOExtensions, ListChangedEventArgs&lt;T&gt;, MarshalingStream, NativeMemoryStream, PinnedObject, ReflectionExtensions, ReflectionExtensions, SafeAllocatedMemoryHandle, SafeByteArray, SafeCoTaskMemHandle, SafeCoTaskMemString, SafeHGlobalHandle, SafeMemoryHandle&lt;T&gt;, SafeMemoryHandleExt&lt;T&gt;, SafeMemString&lt;T&gt;, SparseArray&lt;T&gt;, StringHelper, TryGetValueDelegate, VirtualDictionary&lt;T&gt;, VirtualReadOnlyDictionary&lt;T&gt;
 
 Structures
-EnumFlagIndexer&lt;T&gt;, StrPtrAnsi, StrPtrAuto, StrPtrUni
+BOOL, BOOLEAN, EnumFlagIndexer&lt;T&gt;, GuidPtr, SizeT, StrPtrAnsi, StrPtrAuto, StrPtrUni
 
 Enumerations
-CorrepsondingAction, StringListPackMethod
+CorrespondingAction, StringListPackMethod
 
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
