--- a/UnitTests/PInvoke/Shell32/Shell32.csproj
+++ b/UnitTests/PInvoke/Shell32/Shell32.csproj
@@ -59,6 +59,10 @@
       <Project>{3226020f-4c9d-41b3-ac8a-2bc9fd064cd8}</Project>
       <Name>Vanara.PInvoke.Shell32</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\PInvoke\User32\Vanara.PInvoke.User32.csproj">
+      <Project>{a6771907-addc-49fc-8444-a97aa65e77e2}</Project>
+      <Name>Vanara.PInvoke.User32</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NUnit">
