--- a/UnitTests/PInvoke/User32/User32.csproj
+++ b/UnitTests/PInvoke/User32/User32.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NUnit">
@@ -42,12 +43,17 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="User32GdiTests.cs" />
     <Compile Include="User32Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Core\Vanara.Core.csproj">
       <Project>{241f73ee-9298-45c9-b869-a045dff94c03}</Project>
       <Name>Vanara.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\PInvoke\Gdi32\Vanara.PInvoke.Gdi32.csproj">
+      <Project>{e186aff0-bc70-4776-8bee-9fdae108f4eb}</Project>
+      <Name>Vanara.PInvoke.Gdi32</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\PInvoke\Kernel32\Vanara.PInvoke.Kernel32.csproj">
       <Project>{842d436f-598c-47d7-b5aa-12399f8ccfe9}</Project>
