--- a/PInvoke/KtmW32/Vanara.PInvoke.KtmW32.csproj
+++ b/PInvoke/KtmW32/Vanara.PInvoke.KtmW32.csproj
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
+  <ProjectExtensions>
+    <SupportedDlls>ktmw32.dll</SupportedDlls>
+  </ProjectExtensions>
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants imported from Windows KtmW32.dll.</Description>
     <Copyright>Copyright © 2017-2019</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>3.0.0</VersionPrefix>
+    <VersionPrefix>3.0.1</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard2.0;netcoreapp2.0;netcoreapp2.1</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.KtmW32</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -22,7 +25,15 @@
     <Company>GitHub Community</Company>
     <Product>Vanara</Product>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-    <PackageReleaseNotes></PackageReleaseNotes>
+    <PackageReleaseNotes>Currently implements:
+
+Functions
+CommitComplete, CommitEnlistment, CommitTransaction, CommitTransactionAsync, CreateEnlistment, CreateResourceManager, CreateTransaction, CreateTransactionManager, GetCurrentClockTransactionManager, GetEnlistmentId, GetEnlistmentRecoveryInformation, GetNotificationResourceManager, GetNotificationResourceManagerAsync, GetTransactionId, GetTransactionInformation, GetTransactionManagerId, OpenEnlistment, OpenResourceManager, OpenTransaction, OpenTransactionManager, OpenTransactionManagerById, PrepareComplete, PrepareEnlistment, PrePrepareComplete, PrePrepareEnlistment, ReadOnlyEnlistment, RecoverEnlistment, RecoverResourceManager, RecoverTransactionManager, RenameTransactionManager, RollbackComplete, RollbackEnlistment, RollbackTransaction, RollbackTransactionAsync, RollforwardTransactionManager, SetEnlistmentRecoveryInformation, SetResourceManagerCompletionPort, SetTransactionInformation, SinglePhaseReject
+
+Structures
+HENLISTMENT, HRESMGR, HTRXNMGR, TRANSACTION_NOTIFICATION, TRANSACTION_NOTIFICATION_RECOVERY_ARGUMENT
+
+</PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
