--- a/PInvoke/NetListMgr/Vanara.PInvoke.NetListMgr.csproj
+++ b/PInvoke/NetListMgr/Vanara.PInvoke.NetListMgr.csproj
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
+  <ProjectExtensions>
+    <SupportedDlls>netprofm.dll</SupportedDlls>
+  </ProjectExtensions>
   <PropertyGroup>
     <Description>PInvoke API (interfaces, structures and constants) for Windows NetListMgr COM object.</Description>
     <Copyright>Copyright © 2017-2019</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>3.0.0</VersionPrefix>
+    <VersionPrefix>3.0.1</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard2.0;netcoreapp2.0;netcoreapp2.1</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.NetListMgr</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
