--- a/PInvoke/Pdh/Vanara.PInvoke.Pdh.csproj
+++ b/PInvoke/Pdh/Vanara.PInvoke.Pdh.csproj
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
+  <ProjectExtensions>
+    <SupportedDlls>pdh.dll</SupportedDlls>
+  </ProjectExtensions>
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants imported from Windows Pdh.dll.</Description>
     <Copyright>Copyright © 2017-2019</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>3.0.0</VersionPrefix>
+    <VersionPrefix>3.0.1</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard2.0;netcoreapp2.0;netcoreapp2.1</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.Pdh</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -22,7 +25,15 @@
     <Company>GitHub Community</Company>
     <Product>Vanara</Product>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-    <PackageReleaseNotes></PackageReleaseNotes>
+    <PackageReleaseNotes>Currently implements:
+
+Functions
+PdhAddCounterA, PdhAddCounterW, PdhAddEnglishCounterA, PdhAddEnglishCounterW, PdhBindInputDataSourceA, PdhBindInputDataSourceW, PdhBrowseCountersA, PdhBrowseCountersHA, PdhBrowseCountersHW, PdhBrowseCountersW, PdhCalculateCounterFromRawValue, PdhCloseLog, PdhCloseQuery, PdhCollectQueryData, PdhCollectQueryDataEx, PdhCollectQueryDataWithTime, PdhComputeCounterStatistics, PdhConnectMachineA, PdhConnectMachineW, PdhEnumLogSetNamesA, PdhEnumLogSetNamesW, PdhEnumMachinesA, PdhEnumMachinesHA, PdhEnumMachinesHW, PdhEnumMachinesW, PdhEnumObjectItemsA, PdhEnumObjectItemsHA, PdhEnumObjectItemsHW, PdhEnumObjectItemsW, PdhEnumObjectsA, PdhEnumObjectsHA, PdhEnumObjectsHW, PdhEnumObjectsW, PdhExpandCounterPathA, PdhExpandCounterPathW, PdhExpandWildCardPathA, PdhExpandWildCardPathHA, PdhExpandWildCardPathHW, PdhExpandWildCardPathW, PdhFormatFromRawValue, PdhGetCounterInfoA, PdhGetCounterInfoW, PdhGetCounterTimeBase, PdhGetDataSourceTimeRangeA, PdhGetDataSourceTimeRangeH, PdhGetDataSourceTimeRangeW, PdhGetDefaultPerfCounterA, PdhGetDefaultPerfCounterHA, PdhGetDefaultPerfCounterHW, PdhGetDefaultPerfCounterW, PdhGetDefaultPerfObjectA, PdhGetDefaultPerfObjectHA, PdhGetDefaultPerfObjectHW, PdhGetDefaultPerfObjectW, PdhGetDllVersion, PdhGetFormattedCounterArrayA, PdhGetFormattedCounterArrayW, PdhGetFormattedCounterValue, PdhGetLogFileSize, PdhGetRawCounterArrayA, PdhGetRawCounterArrayW, PdhGetRawCounterValue, PdhIsRealTimeQuery, PdhLookupPerfIndexByNameA, PdhLookupPerfIndexByNameW, PdhLookupPerfNameByIndexA, PdhLookupPerfNameByIndexW, PdhMakeCounterPathA, PdhMakeCounterPathW, PdhOpenLogA, PdhOpenLogW, PdhOpenQueryA, PdhOpenQueryH, PdhOpenQueryW, PdhParseCounterPathA, PdhParseCounterPathW, PdhParseInstanceNameA, PdhParseInstanceNameW, PdhReadRawLogRecord, PdhRemoveCounter, PdhSelectDataSourceA, PdhSelectDataSourceW, PdhSetCounterScaleFactor, PdhSetDefaultRealTimeDataSource, PdhSetQueryTimeRange, PdhUpdateLogA, PdhUpdateLogFileCatalog, PdhUpdateLogW, PdhValidatePathA, PdhValidatePathExWA, PdhValidatePathExWW, PdhValidatePathW
+
+Structures
+PDH_BROWSE_DLG_CONFIG, PDH_BROWSE_DLG_CONFIG_H, PDH_COUNTER_INFO, PDH_COUNTER_PATH_ELEMENTS, PDH_DATA_ITEM_PATH_ELEMENTS, PDH_FMT_COUNTERVALUE, PDH_FMT_COUNTERVALUE_ITEM, PDH_HCOUNTER, PDH_HLOG, PDH_HQUERY, PDH_RAW_COUNTER, PDH_RAW_COUNTER_ITEM, PDH_RAW_LOG_RECORD, PDH_STATISTICS, PDH_TIME_INFO
+
+</PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
