--- a/PInvoke/Shared/Vanara.PInvoke.Shared.csproj
+++ b/PInvoke/Shared/Vanara.PInvoke.Shared.csproj
@@ -11,7 +11,7 @@
 * Shared structures and enums (see release notes)</Description>
     <Copyright>Copyright © 2017-2019</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>3.0.0</VersionPrefix>
+    <VersionPrefix>3.0.1</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard2.0;netcoreapp2.0;netcoreapp2.1</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.Shared</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -32,7 +32,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Classes
-AssociateAttribute, ComTryGetNext, CoTaskMemStringMarshaler, FunctionHelper, IEnumFromCom&lt;T&gt;, IEnumFromIndexer&lt;T&gt;, IEnumFromNext&lt;T&gt;, Lib, Macros, NullTermStringArrayMarshaler, OverlappedAsync, OverlappedAsyncResult, PInvokeClientExtensions, PInvokeDataAttribute, PRECT, PtrFunc&lt;T&gt;, RegistryTypeExt, SafeElementArray&lt;T&gt;, SafeHANDLE, SafeNativeArray&lt;T&gt;, SafeNativeArrayBase&lt;T&gt;, SafeNativeLinkedList&lt;T&gt;, SafeResourceId, SBFunc&lt;T&gt;, SECURITY_ATTRIBUTES, SizeFunc&lt;T&gt;, TryGetNext
+IErrorProvider, IGraphicsObjectHandle, IHandle, IKernelHandle, ISecurityObject, IShellHandle, ISyncHandle, IUserHandle, AssociateAttribute, ComTryGetNext, CoTaskMemStringMarshaler, FunctionHelper, IEnumFromCom&lt;T&gt;, IEnumFromIndexer&lt;T&gt;, IEnumFromNext&lt;T&gt;, Lib, Macros, NullTermStringArrayMarshaler, OverlappedAsync, OverlappedAsyncResult, PInvokeClientExtensions, PInvokeDataAttribute, PRECT, PtrFunc&lt;T&gt;, RegistryTypeExt, SafeElementArray&lt;T&gt;, SafeHANDLE, SafeNativeArray&lt;T&gt;, SafeNativeArrayBase&lt;T&gt;, SafeNativeLinkedList&lt;T&gt;, SafeResourceId, SBFunc&lt;T&gt;, SECURITY_ATTRIBUTES, SizeFunc&lt;T&gt;, StructHelper, TryGetNext
 
 Structures
 ACCESS_MASK, BusNumber, CM_FULL_RESOURCE_DESCRIPTOR, CM_PARTIAL_RESOURCE_DESCRIPTOR, CM_PARTIAL_RESOURCE_LIST, CM_RESOURCE_LIST, COLORREF, Connection, DevicePrivate, DeviceSpecificData, Dma, DmaV3, Generic, HACCEL, HANDLE, HBITMAP, HBRUSH, HCURSOR, HDC, HDESK, HDPA, HDROP, HDSA, HDWP, HENHMETAFILE, HFILE, HFONT, HGDIOBJ, HICON, HIMAGELIST, HINSTANCE, HKEY, HMENU, HMETAFILE, HMONITOR, HPALETTE, HPEN, HPROCESS, HPROPSHEET, HPROPSHEETPAGE, HRESULT, HRGN, HTHEME, HTHREAD, HTHUMBNAIL, HTOKEN, HWINSTA, HWND, Interrupt, LCID, LOGFONT, Memory40, Memory48, Memory64, MessageInterruptRaw, MSG, NTStatus, OBJECT_TYPE_LIST, PACE, PACL, POINTS, PRECT, PSECURITY_DESCRIPTOR, PSID, RECT, ResourceId, SECURITY_ATTRIBUTES, SIZE, SYSTEMTIME, union, WIN32_FIND_DATA, Win32Error
